Update API & doc (cont)
