# routes/account.route.js
@@ -11,18 +11,18 @@ router.use(currentUserMdw)
 router.post('/DepositAccount', async (req, res) => {
   const currentUser = res.locals.currentUser
   if (currentUser.role_id !== 3) {
-    return res.status(403).json({ status: 'fail', message: 'Not allow' })
+    return res.status(403).json({ status: 'fail', message: 'You do not have permission to access the API!' })
   }
   const data = req.body
   if (data.username) {
     const user = await userModel.findOne({ username: data.username }, userViewModel)
     if (!user) {
-      return res.status(204).json({ status: 'fail', message: 'Not found user' })
+      return res.status(200).json({ status: 'not_found_user', message: 'Not found user' })
     }
 
     let account = await accountModel.findOne({ user_id: user.id }, accountViewModel)
     if (!account) {
-      return res.status(204).json({ status: 'fail', message: 'Not found account' })
+      return res.status(200).json({ status: 'not_found_account', message: 'Not found account' })
     }
     account = {
       ...account,
@@ -31,11 +31,11 @@ router.post('/DepositAccount', async (req, res) => {
 
     const ret = await accountModel.update(account.id, account, accountViewModel)
 
-    return res.status(200).json({ status: 'success', data: ret[0] })
+    return res.status(201).json({ status: 'success', data: ret[0] })
   } else if (data.account_number) {
     let account = await accountModel.findOne({ number: data.account_number }, accountViewModel)
     if (!account) {
-      return res.status(204).json({ status: 'fail', message: 'Not found account' })
+      return res.status(200).json({ status: 'not_found_account', message: 'Not found account' })
     }
     account = {
       ...account,
@@ -44,9 +44,9 @@ router.post('/DepositAccount', async (req, res) => {
 
     const ret = await accountModel.update(account.id, account, accountViewModel)
 
-    return res.status(200).json({ status: 'success', data: ret[0] })
+    return res.status(201).json({ status: 'success', data: ret[0] })
   }
-  return res.status(204).json({ status: 'fail', message: 'Not found account or username' })
+  return res.status(200).json({ status: 'missing_parameters', message: 'Not found account or username' })
 })
 
 router.get('/:accountNumber/Internal', async (req, res) => {
@@ -56,7 +56,7 @@ router.get('/:accountNumber/Internal', async (req, res) => {
     const user = await userModel.findOne({ id: account.user_id }, 'name')
     return res.status(200).json({ status: 'success', data: { ...account, username: user.name } })
   }
-  return res.status(200).json({ status: 'fail', message: 'Not found account' })
+  return res.status(204).json({ status: 'fail', message: 'Not found account' })
 })
 
 export default router
